--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="img/favicon.png" type="image/png">
-    <title>Nitin Daddikar | Portfolio</title>
+    <title>MeetMe Personal</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -36,7 +36,7 @@
                         <div class="media-body" style="flex: 1;">
                             <div class="personal_text">
                                 <h6>Hello Everybody, i am</h6>
-                                <h3>Nitin Daddikar</h3>
+                                <h3 id="myName"></h3>
                                 <h4>UI Developer</h4>
                                 <p>A versatile, high-energy web and mobile application developer with the distinction of executing prestigious projects of large magnitude within strict time schedule.</p>
                                 <!-- <ul class="list basic_info">
@@ -75,6 +75,9 @@
                     </div>
                 </div>
             </div>
+            <div class="more_btn downloadCV">
+                <a class="main_btn" href="https://drive.google.com/open?id=1BIlSGFlGALKQNQV83yJthxF7QqyeWvBN" target="_blank">Download CV</a>
+            </div>
         </div>
     </section>
     <!--================End Home Banner Area =================-->
@@ -90,23 +93,16 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="wel_item">
-                                    <i class="lnr lnr-database"></i>
-                                    <h4>$2.5M</h4>
-                                    <p>Total Donation</p>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="wel_item">
                                     <i class="lnr lnr-book"></i>
-                                    <h4>1465</h4>
+                                    <h4>33</h4>
                                     <p>Total Projects</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="wel_item">
-                                    <i class="lnr lnr-users"></i>
-                                    <h4>3965</h4>
-                                    <p>Total Volunteers</p>
+                                    <i class="lnr lnr-star"></i>
+                                    <h4>5</h4>
+                                    <p>Total Awards</p>
                                 </div>
                             </div>
                         </div>
@@ -249,6 +245,135 @@
         </div>
     </section>
     <!--================End My Tabs Area =================-->
+    <!--================Home Gallery Area =================-->
+    <section class="home_gallery_area p_120">
+        <div class="container">
+            <div class="main_title">
+                <h2>Latest Featured Projects</h2>
+                <!-- <p>Who are in extremely love with eco friendly system.</p> -->
+            </div>
+            <div class="isotope_fillter">
+                <ul class="gallery_filter list">
+                    <li class="active" data-filter="*"><a href="#">All</a></li>
+                    <li data-filter=".web"><a href="#">Web</a></li>
+                    <li data-filter=".mobile"><a href="#">Mobile</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="gallery_f_inner row imageGallery1">
+                <div class="col-lg-4 col-md-4 col-sm-6 brand manipul web">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/nhts.png" alt="">
+                            <a class="light" href="http://erp.trainezy.com"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>NHTS ERP</h4>
+                            <p>Angular 7, SCSS, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand mobile">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/10x.png" alt="">
+                            <a class="light" href="https://play.google.com/store/apps/details?id=com.tenxtask&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>10x Task</h4>
+                            <p>Ionic 3, Angular 6, SCSS, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand manipul web">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/ultria-web.png" alt="">
+                            <a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Ultria CLM</h4>
+                            <p>Angular 6, jQuery, SCSS, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 manipul creative web">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/ftp.png" alt="">
+                            <a class="light" href="http://frozentimeproduction.com"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Frozen Time Production</h4>
+                            <p>jQuery, CSS3, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand mobile">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/lawyer.png" alt="">
+                            <a class="light" href="https://play.google.com/store/apps/details?id=vakilkanumber.com&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Lawyer</h4>
+                            <p>Ionic 3, Angular 6, SCSS, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand mobile">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/ultria-mobile.png" alt="">
+                            <a class="light" href="https://play.google.com/store/apps/details?id=com.ultria&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Ultria CLM - Mobile</h4>
+                            <p>Ionic 3, Angular 6, SCSS, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand web">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/gallery/project-5.jpg" alt="">
+                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Doggie Dog World</h4>
+                            <p>jQuery, CSS3, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand web">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/csi.png" alt="">
+                            <a class="light" href="img/gallery/project-4.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Computer Society of India, Viva Chapter</h4>
+                            <p>jQuery, CSS3, HTML5</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 brand mobile">
+                    <div class="h_gallery_item">
+                        <div class="g_img_item">
+                            <img class="img-fluid" src="img/projects/seckey.png" alt="">
+                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                        </div>
+                        <div class="g_item_text">
+                            <h4>Seckey Paste</h4>
+                            <p>Android Studio, JAVA, XML</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--================End Home Gallery Area =================-->
 
     <!--================Footer Area =================-->
     <footer class="footer_area">
@@ -288,6 +413,7 @@
     <script src="vendors/counter-up/jquery.waypoints.min.js"></script>
     <script src="vendors/counter-up/jquery.counterup.min.js"></script>
     <script src="js/mail-script.js"></script>
+    <script src="js/typeit.js"></script>
     <script src="js/theme.js"></script>
 </body>
 
