--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/nhts.png" alt="">
-                            <a class="light" href="http://erp.trainezy.com"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="http://erp.trainezy.com"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>NHTS ERP</h4>
@@ -278,7 +278,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/10x.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=com.tenxtask&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="https://play.google.com/store/apps/details?id=com.tenxtask&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>10x Task</h4>
@@ -290,7 +290,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ultria-web.png" alt="">
-                            <a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="img/gallery/project-1.jpg"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Ultria CLM</h4>
@@ -302,7 +302,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ftp.png" alt="">
-                            <a class="light" href="http://frozentimeproduction.com"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="http://frozentimeproduction.com"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Frozen Time Production</h4>
@@ -314,7 +314,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/lawyer.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=vakilkanumber.com&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="https://play.google.com/store/apps/details?id=vakilkanumber.com&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Lawyer</h4>
@@ -326,7 +326,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ultria-mobile.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=com.ultria&hl=en"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="https://play.google.com/store/apps/details?id=com.ultria&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Ultria CLM - Mobile</h4>
@@ -337,8 +337,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 brand web">
                     <div class="h_gallery_item">
                         <div class="g_img_item">
-                            <img class="img-fluid" src="img/gallery/project-5.jpg" alt="">
-                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                            <img class="img-fluid" src="img/temp.jpg" alt="">
+                            <a class="light" href="img/temp.jpg"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Doggie Dog World</h4>
@@ -350,7 +350,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/csi.png" alt="">
-                            <a class="light" href="img/gallery/project-4.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="img/gallery/project-4.jpg"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Computer Society of India, Viva Chapter</h4>
@@ -362,7 +362,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/seckey.png" alt="">
-                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>Seckey Paste</h4>
