--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Verdantis Technologies Pvt. Ltd.</h4>
-                                        <p>UI Developer</p>
+                                        <p>Associate Tech Lead - UI</p>
                                     </div>
                                 </div>
                             </li>
