--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="personal_text">
                                 <h6>Hello Everybody, i am</h6>
                                 <h3 id="myName"></h3>
-                                <h4>UI Developer</h4>
+                                <h4>Associate Tech Lead - UI</h4>
                                 <p>A versatile, high-energy web and mobile application developer with the distinction of executing prestigious projects of large magnitude within strict time schedule.</p>
                                 <!-- <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
