--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/nhts.png" alt="">
-                            <a class="light" href="http://erp.trainezy.com"><img src="img/magnifingGlass.png" alt=""></a>
+                            <a class="light" href="http://demo.erpmet.com"><img src="img/magnifingGlass.png" alt=""></a>
                         </div>
                         <div class="g_item_text">
                             <h4>NHTS ERP</h4>
