--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <ul class="list personal_social professional_links">
                                 <li><a href="https://github.com/Nitin-Daddikar" target="_blank"><i class="fa fa-github"></i></a> <span>GitHub</span></li>
                                 <li><a href="https://stackoverflow.com/users/6286968/nitin-daddikar" target="_blank"><i class="fa fa-stack-overflow"></i></a> <span>Stack Overflow</span></li>
-                                <li><a href="linkedin.com/in/nitin-daddikar" target="_blank"><i class="fa fa-linkedin"></i></a> <span>LinkedIn</span></li>
+                                <li><a href="https://linkedin.com/in/nitin-daddikar" target="_blank"><i class="fa fa-linkedin"></i></a> <span>LinkedIn</span></li>
                                 <li><a href="http://nitindaddikar.blogspot.com/" target="_blank"><i class="fa fa-stack-overflow"></i></a> <span>Blogspot</span></li>
                                 <li><a href="https://gist.github.com/Nitin-Daddikar" target="_blank"><i class="fa fa-github"></i></a> <span>Gists</span></li>
                                 <li><a href="https://www.hackerearth.com/@nitin1523" target="_blank"><i class="fa fa-linkedin"></i></a> <span>HackerEarth</span></li>
