new experiance added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="tools_expert">
                         <div class="skill_main">
                             <div class="skill_item">
-                                <h4>Angular 2+ : <span class="counter">90</span>%</h4>
+                                <h4>Angular 2+ : <span class="counter">95</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Ionic 3 : <span class="counter">95</span>%</h4>
+                                <h4>Ionic 3 : <span class="counter">90</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -178,10 +178,10 @@
                                 <span></span>
                                 <div class="media">
                                     <div class="d-flex">
-                                        <p class="extraSpacesOne">June 2017 to present</p>
+                                        <p class="extraSpacesOne">Sept 19 &nbsp; to &nbsp; Present</p>
                                     </div>
                                     <div class="media-body">
-                                        <h4>Verdantis Technologies Pvt. Ltd.</h4>
+                                        <h4>Zycus Infotech Pvt. Ltd.</h4>
                                         <p>Associate Tech Lead - UI</p>
                                     </div>
                                 </div>
@@ -190,7 +190,21 @@
                                 <span></span>
                                 <div class="media">
                                     <div class="d-flex">
-                                        <p>July 2015 to March 2017</p>
+                                        <p class="extraSpacesOne">June 17 &nbsp; to &nbsp; Sept 19</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Verdantis Technologies Pvt. Ltd.</h4>
+                                        <p>Associate Tech Lead - UI</p>
+                                        <p>UI Developer</p>
+                                        <p>Associate UI Developer</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p class="extraSpacesOne">July 15 &nbsp; to &nbsp; March 17</p>
                                     </div>
                                     <div class="media-body">
                                         <h4>Insta Digital</h4>
