--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="personal_text">
                                 <h6>Hello Everybody, i am</h6>
                                 <h3 id="myName"></h3>
-                                <h4>Associate Tech Lead - UI</h4>
+                                <h4>Tech Lead - UI <span style="color: #777777; text-transform: none;">at Zycus Infotech Pvt. Ltd.</span></h4>
                                 <p>A versatile, high-energy web and mobile application developer with the distinction of executing prestigious projects of large magnitude within strict time schedule.</p>
                                 <!-- <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
@@ -182,6 +182,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Zycus Infotech Pvt. Ltd.</h4>
+                                        <p>Tech Lead - UI</p>
                                         <p>Associate Tech Lead - UI</p>
                                     </div>
                                 </div>
