--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="more_btn downloadCV">
-                <a class="main_btn" href="https://www.dropbox.com/s/i4j64sxk4tj8le9/Nitin-Daddikar-CV.pdf?dl=1" target="_blank">Download CV</a>
+                <a class="main_btn" href="https://www.dropbox.com/s/za05ffvn1e25q60/Nitin-Daddikar-CV.pdf?dl=1" target="_blank">Download CV</a>
             </div>
         </div>
     </section>
@@ -120,10 +120,18 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Ionic 3 : <span class="counter">90</span>%</h4>
+                                <h4>React JS : <span class="counter">90</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Ionic Framework : <span class="counter">95</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -136,18 +144,18 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>HTML & CSS : <span class="counter">95</span>%</h4>
+                                <h4>Laravel : <span class="counter">90</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>jQuery : <span class="counter">90</span>%</h4>
+                                <h4>HTML & CSS : <span class="counter">95</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -281,7 +289,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/nhts.png" alt="">
-                            <a class="light" href="http://demo.erpmet.com"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="http://demo.erpmet.com"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>NHTS ERP</h4>
@@ -293,11 +301,11 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/10x.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=com.tenxtask&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="https://play.google.com/store/apps/details?id=com.tenxtask&hl=en"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>10x Task</h4>
-                            <p>Ionic 3, Angular 6, SCSS, HTML5</p>
+                            <p>Ionic 5, Angular 6, Laravel, SCSS, HTML5</p>
                         </div>
                     </div>
                 </div>
@@ -305,7 +313,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ultria-web.png" alt="">
-                            <a class="light" href="img/gallery/project-1.jpg"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="img/gallery/project-1.jpg"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Ultria CLM</h4>
@@ -317,7 +325,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ftp.png" alt="">
-                            <a class="light" href="http://frozentimeproduction.com"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="http://frozentimeproduction.com"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Frozen Time Production</h4>
@@ -329,7 +337,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/lawyer.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=vakilkanumber.com&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="https://play.google.com/store/apps/details?id=vakilkanumber.com&hl=en"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Lawyer</h4>
@@ -341,7 +349,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/ultria-mobile.png" alt="">
-                            <a class="light" href="https://play.google.com/store/apps/details?id=com.ultria&hl=en"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="https://play.google.com/store/apps/details?id=com.ultria&hl=en"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Ultria CLM - Mobile</h4>
@@ -352,12 +360,12 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 brand web">
                     <div class="h_gallery_item">
                         <div class="g_img_item">
-                            <img class="img-fluid" src="img/temp.jpg" alt="">
-                            <a class="light" href="img/temp.jpg"><img src="img/magnifingGlass.png" alt=""></a>
+                            <img class="img-fluid" src="img/projects/finvine.png" alt="">
+                            <!-- <a class="light" href="img/temp.jpg"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
-                            <h4>Doggie Dog World</h4>
-                            <p>jQuery, CSS3, HTML5</p>
+                            <h4>FineVine</h4>
+                            <p>Angular 7, Laravel, CSS3, HTML5</p>
                         </div>
                     </div>
                 </div>
@@ -365,7 +373,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/csi.png" alt="">
-                            <a class="light" href="img/gallery/project-4.jpg"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="img/gallery/project-4.jpg"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Computer Society of India, Viva Chapter</h4>
@@ -377,7 +385,7 @@
                     <div class="h_gallery_item">
                         <div class="g_img_item">
                             <img class="img-fluid" src="img/projects/seckey.png" alt="">
-                            <a class="light" href="img/gallery/project-5.jpg"><img src="img/magnifingGlass.png" alt=""></a>
+                            <!-- <a class="light" href="img/gallery/project-5.jpg"><img src="img/magnifingGlass.png" alt=""></a> -->
                         </div>
                         <div class="g_item_text">
                             <h4>Seckey Paste</h4>
