--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="personal_text">
                                 <h6>Hello Everybody, i am</h6>
                                 <h3 id="myName"></h3>
-                                <h4>Tech Lead - UI <span style="color: #777777; text-transform: none;">at Zycus Infotech Pvt. Ltd.</span></h4>
+                                <h4><span style="color: #777777; text-transform: none;">Engineer at Fractal Analytics</span></h4>
                                 <p>A versatile, high-energy web and mobile application developer with the distinction of executing prestigious projects of large magnitude within strict time schedule.</p>
                                 <!-- <ul class="list basic_info">
                                     <li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="more_btn downloadCV">
-                <a class="main_btn" href="https://www.dropbox.com/s/za05ffvn1e25q60/Nitin-Daddikar-CV.pdf?dl=1" target="_blank">Download CV</a>
+                <a class="main_btn" href="https://www.dropbox.com/s/5ltrjzd3eog401f/Nitin-Daddikar-CV.pdf?dl=1" target="_blank">Download CV</a>
             </div>
         </div>
     </section>
@@ -186,7 +186,19 @@
                                 <span></span>
                                 <div class="media">
                                     <div class="d-flex">
-                                        <p class="extraSpacesOne">Sept 19 &nbsp; to &nbsp; Present</p>
+                                        <p class="extraSpacesOne">April 21 &nbsp; to &nbsp; Present</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Fractal Analytics</h4>
+                                        <p>Engineer</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p class="extraSpacesOne">Sept 19 &nbsp; to &nbsp; April 21</p>
                                     </div>
                                     <div class="media-body">
                                         <h4>Zycus Infotech Pvt. Ltd.</h4>
@@ -205,18 +217,6 @@
                                         <h4>Verdantis Technologies Pvt. Ltd.</h4>
                                         <p>Associate Tech Lead - UI</p>
                                         <p>UI Developer</p>
-                                        <p>Associate UI Developer</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <span></span>
-                                <div class="media">
-                                    <div class="d-flex">
-                                        <p class="extraSpacesOne">July 15 &nbsp; to &nbsp; March 17</p>
-                                    </div>
-                                    <div class="media-body">
-                                        <h4>Insta Digital</h4>
                                         <p>Associate UI Developer</p>
                                     </div>
                                 </div>
